--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <input type="button" value="C" onclick="clearDisplay()">
     </div>
 
-    <script src="js/"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
